rns-lang/test_data/integration/error/lexer/directives/dot_semicolon.ja
.method
    .;comment after semicolon
.end